--- a/.github/workflows/go-ci-lint.yaml
+++ b/.github/workflows/go-ci-lint.yaml
@@ -1,28 +1,30 @@
----
-name: Go Linter
+name: Go lint
 on:
-    workflow_dispatch:
-    push:
-    pull_request:
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
+
 permissions:
-    contents: read
-    pull-requests: read
+  contents: read
+  pull-requests: read
+  checks: write
+
 jobs:
-    golangci:
-        name: Golangci-lint
-        runs-on: ubuntu-latest
-        env:
-            GO_VERSION: ~1.22
-        steps:
-            - uses: actions/checkout@v3
-            - name: Set up Go
-              uses: actions/setup-go@v4
-              with:
-                  go-version: ${{ env.GO_VERSION }}
-                  cache: false
-            - name: golangci-lint
-              uses: golangci/golangci-lint-action@v3
-              with:
-                  version: v1.54
-                  args: --config .golangci.yml
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
+  golangci:
+    strategy:
+      matrix:
+        go: ['1.22']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    name: lint
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go }}
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.58
