--- a/.github/workflows/go-ci-tests.yml
+++ b/.github/workflows/go-ci-tests.yml
@@ -7,8 +7,8 @@ on:
 env:
     GO_VERSION: ~1.22
 jobs:
-    golangci:
-        name: Go Tests
+    gotest-dagger:
+        name: Go Tests Daggerized
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
@@ -16,6 +16,10 @@ jobs:
               uses: actions/setup-go@v4
               with:
                   go-version: ${{ env.GO_VERSION }}
-            - name: Test
-              working-directory: ${{ github.workspace }}
-              run: go test -v ./...
+            - name: GoTest
+              uses: dagger/dagger-for-github@v5
+              with:
+                verb: call
+                module: github.com/Excoriate/daggerverse/gotest
+                args: run-go-test-sum --src="." --enable-pretty --enable-cache
+                version: "v0.12.1"
