--- a/.github/workflows/go-ci-tests.yml
+++ b/.github/workflows/go-ci-tests.yml
@@ -20,6 +20,8 @@ jobs:
               uses: dagger/dagger-for-github@v5
               with:
                 verb: call
-                module: github.com/Excoriate/daggerverse/gotest
+                module: github.com/Excoriate/daggerverse/gotest@v1.12.1
                 args: run-go-test-sum --src="." --enable-pretty --enable-cache
-                version: "v0.12.1"
+                version: "0.11.4"
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
