--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,9 @@ on:
 defaults:
     run:
         shell: bash
+env:
+  GO_VERSION: ~1.22
+
 jobs:
     release-please:
         permissions:
@@ -21,9 +24,27 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3
-            - uses: google-github-actions/release-please-action@ee9822ec2c397e8a364d634464339ac43a06e042
+            - uses: googleapis/release-please-action@v4
               id: release
               with:
                   command: manifest
                   token: ${{secrets.GITHUB_TOKEN}}
                   default-branch: main
+
+    publish-go-module:
+      needs: release-please
+      runs-on: ubuntu-latest
+      if: ${{ needs.release-please.outputs.releases_created }}
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v3
+        - name: Set up Go
+          uses: actions/setup-go@v4
+          with:
+            go-version: ${{ env.GO_VERSION }}
+        - name: Install dependencies
+          run: go mod tidy
+        - name: Publish Go module
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          run: ./publish-go-module.sh
