build: Update dependencies in go.mod and go.sum files
Add dagger.io/dagger v0.11.4 and gopkg.in/yaml.v3 v3.0.1 to dependencies. Update
github.com/davecgh/go-spew to v1.1.1, github.com/google/go-cmp to v0.6.0,
github.com/pmezard/go-difflib to v1.0.0, and github.com/stretchr/testify to v1.9.0
in go.sum file. Update .github/labeler.yml configuration for CI/CD workflows.

--- a/.github/workflows/go-ci-tests.yml
+++ b/.github/workflows/go-ci-tests.yml
@@ -19,9 +19,9 @@ jobs:
             - name: GoTest
               uses: dagger/dagger-for-github@v5
               with:
-                verb: call
-                module: github.com/Excoriate/daggerverse/gotest@v1.12.1
-                args: run-go-test-sum --src="." --enable-pretty --enable-cache
-                version: "0.11.4"
+                  verb: call
+                  module: github.com/Excoriate/daggerverse/gotest@v1.12.1
+                  args: run-go-test-sum --src="." --enable-pretty --enable-cache
+                  version: 0.11.4
               env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
