--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ defaults:
     run:
         shell: bash
 env:
-  GO_VERSION: ~1.22
+    GO_VERSION: ~1.22
 
 jobs:
     release-please:
@@ -32,19 +32,19 @@ jobs:
                   default-branch: main
 
     publish-go-module:
-      needs: release-please
-      runs-on: ubuntu-latest
-      if: ${{ needs.release-please.outputs.releases_created }}
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v3
-        - name: Set up Go
-          uses: actions/setup-go@v4
-          with:
-            go-version: ${{ env.GO_VERSION }}
-        - name: Install dependencies
-          run: go mod tidy
-        - name: Publish Go module
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          run: ./publish-go-module.sh
+        needs: release-please
+        runs-on: ubuntu-latest
+        if: ${{ needs.release-please.outputs.releases_created }}
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: Set up Go
+              uses: actions/setup-go@v4
+              with:
+                  go-version: ${{ env.GO_VERSION }}
+            - name: Install dependencies
+              run: go mod tidy
+            - name: Publish Go module
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              run: ./scripts/publish-go-module.sh
