build: Update GitHub Actions workflows to fetch full history
The release.yaml files in the workflows directory were updated to include
the "fetch-depth: 0" option in the "actions/checkout" step. This change allows
the workflows to fetch the full commit history when checking out the repository
before running the actions. Additionally, the publish-go-module.sh script was
modified to check for the latest tag when extracting the module version, 
providing more accurate version information.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3
+              with:
+                  fetch-depth: 0
             - uses: googleapis/release-please-action@v4
               id: release
               with:
@@ -38,6 +40,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+              with:
+                  fetch-depth: 0
             - name: Set up Go
               uses: actions/setup-go@v4
               with:
