feat: Add go-publish task to publish Go module
Added a new task in TaskFile.yml to publish the go module to the registry using a script.
Also, added commands in the publish-go-module.sh script to trigger indexing on pkg.go.dev after publishing the module.

--- a/TaskFile.yml
+++ b/TaskFile.yml
@@ -29,3 +29,8 @@ tasks:
             - task: golang:go-vet
             - task: golang:go-lint
             - task: golang:go-test
+
+    go-publish:
+        desc: Publish the go module to the registry
+        cmds:
+            - ./scripts/publish-go-module.sh
