--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,53 +1,53 @@
 ---
 name: Release
 on:
-    push:
-        branches:
-            - main
-            - '[0-9]+.[0-9]+.x'
-    workflow_dispatch:
+  push:
+    branches:
+      - main
+      - '[0-9]+.[0-9]+.x'
+  workflow_dispatch:
 defaults:
-    run:
-        shell: bash
+  run:
+    shell: bash
 env:
-    GO_VERSION: ~1.22
+  GO_VERSION: ~1.22
 
 jobs:
-    release-please:
-        permissions:
-            contents: write
-            pull-requests: write
-        runs-on: ubuntu-latest
-        outputs:
-            releases_created: ${{ steps.release.outputs.releases_created }}
-            tag_name: ${{ steps.release.outputs.tag_name }}
-        steps:
-            - name: Checkout
-              uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3
-              with:
-                  fetch-depth: 0
-            - uses: googleapis/release-please-action@v4
-              id: release
-              with:
-                  command: manifest
-                  token: ${{secrets.GITHUB_TOKEN}}
-                  default-branch: main
+  release-please:
+    permissions:
+      contents: write
+      pull-requests: write
+    runs-on: ubuntu-latest
+    outputs:
+      releases_created: ${{ steps.release.outputs.releases_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3
+        with:
+          fetch-depth: 0
+      - uses: googleapis/release-please-action@v4
+        id: release
+        with:
+          command: manifest
+          token: ${{secrets.GITHUB_TOKEN}}
+          default-branch: main
 
-    publish-go-module:
-        name: Publish Go Module with GoPublisher Dagger
-        needs: release-please
-        runs-on: ubuntu-latest
-        if: ${{ needs.release-please.outputs.releases_created }}
-        steps:
-            - uses: actions/checkout@v3
-            - name: Set up Go
-              uses: actions/setup-go@v4
-              with:
-                  go-version: ${{ env.GO_VERSION }}
-            - name: GoTest
-              uses: dagger/dagger-for-github@v5
-              with:
-                  verb: call
-                  module: github.com/Excoriate/daggerverse/gopublisher@v1.14.0
-                  args: go-mod-publish --src="."
-                  version: 0.11.6
+  publish-go-module:
+    name: Publish Go Module with GoPublisher Dagger
+    needs: release-please
+    runs-on: ubuntu-latest
+    if: ${{ needs.release-please.outputs.releases_created }}
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ env.GO_VERSION }}
+      - name: GoTest
+        uses: dagger/dagger-for-github@v5
+        with:
+          verb: call
+          module: github.com/Excoriate/daggerverse/gopublisher@v1.14.0
+          args: go-mod-publish --src="." --github-token="${{secrets.GITHUB_TOKEN}}"
+          version: 0.11.6
