--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,7 +23,7 @@ jobs:
             tag_name: ${{ steps.release.outputs.tag_name }}
         steps:
             - name: Checkout
-              uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3
+              uses: actions/checkout@v4
               with:
                   fetch-depth: 0
             - uses: googleapis/release-please-action@v4
@@ -39,7 +39,9 @@ jobs:
         runs-on: ubuntu-latest
         if: ${{ needs.release-please.outputs.releases_created }}
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
             - name: Set up Go
               uses: actions/setup-go@v4
               with:
@@ -49,5 +51,5 @@ jobs:
               with:
                   verb: call
                   module: github.com/Excoriate/daggerverse/gopublisher@v1.14.0
-                  args: go-mod-publish --src="." --tag="${{ needs.release-please.outputs.tag_name }}"
+                  args: go-mod-publish --src="."
                   version: 0.11.6
